# 121_session_replica_ielts

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api-gateway/: .env.example  README.md  pyproject.toml
apps/api-gateway/app/: config.py  db.py  deps.py  main.py
apps/api-gateway/app/models/: __init__.py  audio_segment.py  candidate.py  cue_card.py  exam_session.py  exam_session_event.py  grading_job.py  topic_set.py  transcript.py  video_segment.py
apps/api-gateway/app/routers/: auth.py  internal_debug.py  sessions.py  ws_exam.py
apps/api-gateway/app/services/: exam_content.py  exam_orchestrator.py  fsm_engine.py  gemini_bridge.py  grading_trigger.py  media_tap.py  observability.py  presigned_upload.py  timers.py
apps/api-gateway/app/tests/: test_observability.py
apps/web/: .env.local.example  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
apps/web/public/worklets/: pcm-worklet-processor.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/audio/: audio-level.ts  audio-worklet-global.d.ts  pcm-worklet-processor.ts  playback-jitter-buffer.ts  proctoring-recorder.ts
apps/web/src/components/exam/: ConnectionStatusBanner.test.tsx  ConnectionStatusBanner.tsx  CountdownPanel.test.tsx  CountdownPanel.tsx  CueCardPanel.test.tsx  (+4 more)
apps/web/src/lib/: api.ts  demoReport.ts
apps/web/src/persistence/: turn-buffer.ts
apps/web/src/state/: examStore.ts
apps/web/src/types/: report.ts
apps/web/src/ws/: exam-socket-client.ts
apps/worker/: README.md  band_score_reports.py  calibration_corpus.py  calibration_metrics.py  calibration_report.py  celery_app.py  config.py  db.py  feature_vectors.py  job_status.py  models.py  nlp_common.py  pyproject.toml  reconciliation.py  rubric_assets.py  storage.py
apps/worker/pipelines/: grading_pipeline.py
apps/worker/providers/: grammar_check.py  pronunciation.py  scoring_llm.py  transcription.py
apps/worker/tasks/: asr.py  calibration.py  media.py  pronunciation.py  scoring.py
apps/worker/tasks/nlp/: fluency.py  grammar.py  lexical.py  lexicons.py
apps/worker/tests/: test_calibration_corpus.py  test_calibration_metrics.py  test_calibration_report.py  test_celery_app.py  test_grading_pipeline.py  test_media_retention.py  test_reconciliation.py  test_scoring_llm_prompt_suffix.py
docs/: SPEC_01_SYSTEM_ARCHITECTURE.md  SPEC_02_IELTS_FLOW_STATE_MACHINE.md  SPEC_03_ASYNC_GRADING_ENGINE.md  SPEC_04_REPOSITORY_AND_BUILD_PLAN.md
docs/adr/: 0001-raw-websocket-gemini-bridge.md
infra/: README.md
infra/docker/: docker-compose.dev.yml
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
migrations/: README.md  env.py
migrations/versions/: 0001_initial_schema.py  0002_media_segments.py  0003_exam_content.py  0004_grading_pipeline.py  0005_audio_segment_phase.py  0006_feature_vectors.py  0007_band_score_reports.py
specs/: SPEC_01_SYSTEM_ARCHITECTURE.md
tests/: README.md
tests/fixtures/calibration_benchmark/: benchmark_corpus_v1.json
tests/fixtures/gemini_live_replay/: connectivity_test_session.json  full_exam_session.json
tests/fixtures/reference_audio/: complex_grammar_transcript.json  fluent_transcript.json  hesitant_transcript.json  rich_lexicon_transcript.json  simple_grammar_transcript.json  simple_lexicon_transcript.json
tests/fixtures/rubric_assets/: band_descriptors_v1.json
tests/integration/: test_auth_session_flow.py  test_calibration_pilot.py  test_exam_room_gemini_relay.py  test_feature_extraction_pipeline.py  test_finalize_media.py  test_fluency_metrics.py  test_full_exam_session_flow.py  test_gemini_bridge_replay.py  test_grading_trigger.py  test_grammar_metrics.py  test_internal_debug_endpoint.py  test_lexical_metrics.py  test_media_retention_sweep.py  test_no_credential_leakage.py  test_observability_metrics.py  test_pronunciation_scores.py  test_synthesize_band_scores.py  test_transcribe_full_session.py  test_video_presigned_upload.py
tests/load/: live_session_load.py  test_load_harness_smoke.py
tests/support/: fake_gemini_live_server.py
tests/unit/: test_scaffold.py
(+12 files in other folders)
