[project]
name = "api-gateway"
version = "0.1.0"
description = "Stateful WS gateway + REST API for the IELTS speaking exam platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.17",
    "boto3>=1.35",
    "websockets>=13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "psycopg2-binary>=2.9", # sync driver, used only by Alembic migrations
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
